--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CredHill</title>
-    <link rel="shortcut icon" href="/public/mountain.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/mountain.png" type="image/x-icon">
   </head>
   <body>
     <div id="root"></div>
